escape @ in etex files

--- a/manual/src/cmds/Makefile
+++ b/manual/src/cmds/Makefile
@@ -28,7 +28,7 @@ all: $(FILES)
 	mv $*.texquote_error.tex $@
 
 warnings-help.etex: ../warnings-help.etex
-	cp $< $@
+	sed 's/@/\\@/g' $< > $@
 
 
 .PHONY: clean
